Bug 105937 - T.DIST.RT function - T.DIST.RT(-1,9)
Summary: T.DIST.RT function - T.DIST.RT(-1,9)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Winfried Donkers
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-11 12:34 UTC by raal
Modified: 2017-02-26 12:45 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
test document used for testing the fix. (348.06 KB, application/vnd.oasis.opendocument.spreadsheet-flat-xml)
2017-02-11 14:09 UTC, Winfried Donkers
Details

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2017-02-11 12:34:44 UTC
Description:
formula =T.DIST.RT(-1,9) return error in Calc, but should return
8,28281801931043E-001

Steps to Reproduce:
=T.DIST.RT(-1,9)

Actual Results:  
error

Expected Results:
8,28281801931043E-001


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:51.0) Gecko/20100101 Firefox/51.0
Comment 1 Winfried Donkers 2017-02-11 14:09:55 UTC
Created attachment 131095 [details]
test document used for testing the fix.
Comment 2 Commit Notification 2017-02-21 21:19:25 UTC
Winfried Donkers committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ceb1b8f3baa425f0d1ec96ceb2e49e3a04ba4a0a

tdf#105937 fix incorrect constraint for Calc function T.DIST.RT.

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.